    without being shoehorned with ifdefs into the QtWidgets implementation.
    - Split into a view/controller architecture
    - Non-gui logic moved to controllers
    - Each controller has a gui counter part, implemented for each supported frontend
  - Uses nlohmann JSON library (MIT) instead of QJsonDocument, for saving/restoring layouts

* v1.6.0 (unreleased)
 - Fixed restoring of normal geometry when closing a maximized window (#259)
 - Experimental support for docking into dock widgets which are in a MDI area.
 - Fixed potential crash involving infinite loop between QWidget::create() and QWidget::createWinId()
 - Moved DropIndicatorOverlayInterface::DropLocation enum to KDDockWidgets namespace scope
 - Added Config::setDropIndicatorAllowedFunc() and corresponding example
   (kddockwidgets_example --hide-certain-docking-indicators)
 - Fixed case where unfloating wouldn't restore to the main window (#44 and #96)
 - Fixed MainWindow not propagating close events to docked widgets
 - X11: Improved detecting which window is under the cursor, by using native X11 API
 - X11: Fixed dragging a maximized floating window. Its size is now restored to normal size when the drag starts.
 - Added DockWidgetBase::currentTabIndex()
 - Added InitialVisibilityOption::PreserveCurrentTab
 - Added MainWindow::internalLayout() for advanced customization

* v1.5.0 (24 November 2021)
 - Install the Python bindings to "site-packages"
 - The Python bindings for Qt6 use the "PyKDDockWidgetsQt6" namespace
 - Co-installable with Qt6
 - Adds support for non-detachable central widget, MainWindowOption_HasCentralWidget. (#225)
 - Fix corrupt layout when restoring old JSON
 - Fix "Unpin" button not showing up in overlayed widgets
 - Minimum Qt version is now 5.15

* v1.4.0 (16 July 2021)
  - No longer supports Qt versions less than 5.12
  - Experimental MDI support. By using MainWindowMDI you can now have "docked" dock widgets