@@ -99,7 +99,10 @@ public:
     bool isQtQuick() const;
 
     /// @brief Returns how many pixels the mouse must move for a drag to start
-    virtual int startDragDistance() const;
+    /// This is usually 4 by default (QApplication::startDragDistance() for QtWidgets)
+    /// You can override by calling Config::setStartDragDistance(), so you don't need to create
+    /// a new Platform class.
+    int startDragDistance() const;
 
     /// @brief Return whether we use the global event filter based mouse grabber
     virtual bool usesFallbackMouseGrabber() const = 0;
@@ -255,6 +258,7 @@ public:
     Private *const d;
 
 protected:
+    virtual int startDragDistance_impl() const;
     Platform();
 };
 
