@@ -7,6 +7,7 @@
     - Non-gui logic moved to controllers
     - Each controller has a gui counter part, implemented for each supported frontend
   - Uses nlohmann JSON library (MIT) instead of QJsonDocument, for saving/restoring layouts
+  - Added Config::setStartDragDistance()
 
 * v1.6.0 (unreleased)
  - Fixed restoring of normal geometry when closing a maximized window (#259)
